<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="yozakura_statusbar"
    android:title="@string/yozakura_statusbar_category">

    <!-- YozakuraOS cp71: expose LineageOS Network traffic monitor in the Yozakura status bar menu -->
    <Preference
        android:fragment="org.yozakuraos.yozakuraparts.statusbar.NetworkTrafficSettings"
        android:key="network_traffic_settings"
        android:title="@string/network_traffic_settings_title"
        android:summary="@string/network_traffic_settings_summary" />

    <lineageos.preference.SecureSettingSwitchPreference
        android:key="yozakura_carrier_label"
        android:title="@string/yozakura_carrier_label_title"
        android:summary="@string/yozakura_carrier_label_summary"
        android:defaultValue="false" />

    <org.yozakuraos.yozakuraparts.preference.SecureSettingEditTextPreference
        android:key="yozakura_carrier_label_text"
        android:title="@string/yozakura_carrier_label_text_title"
        android:summary="@string/yozakura_carrier_label_text_summary"
        android:dialogTitle="@string/yozakura_carrier_label_text_title"
        android:dependency="yozakura_carrier_label" />

    <lineageos.preference.SecureSettingSwitchPreference
        android:key="yozakura_battery_bar"
        android:title="@string/yozakura_battery_bar_title"
        android:summary="@string/yozakura_battery_bar_summary"
        android:defaultValue="false" />

    <org.yozakuraos.yozakuraparts.preference.SecureSettingListPreference
        android:key="yozakura_battery_bar_position"
        android:title="@string/yozakura_battery_bar_position_title"
        android:summary="%s"
        android:entries="@array/yozakura_battery_bar_position_entries"
        android:entryValues="@array/yozakura_battery_bar_position_values"
        android:defaultValue="0"
        android:dependency="yozakura_battery_bar" />

    <org.yozakuraos.yozakuraparts.preference.SecureSettingListPreference
        android:key="yozakura_battery_bar_height"
        android:title="@string/yozakura_battery_bar_height_title"
        android:summary="%s"
        android:entries="@array/yozakura_battery_bar_height_entries"
        android:entryValues="@array/yozakura_battery_bar_height_values"
        android:defaultValue="0"
        android:dependency="yozakura_battery_bar" />

    <org.yozakuraos.yozakuraparts.preference.SecureSettingListPreference
        android:key="yozakura_battery_bar_color"
        android:title="@string/yozakura_battery_bar_color_title"
        android:summary="%s"
        android:entries="@array/yozakura_battery_bar_color_entries"
        android:entryValues="@array/yozakura_battery_bar_color_values"
        android:defaultValue="0"
        android:dependency="yozakura_battery_bar" />

    <!-- YozakuraOS cp37: expose LineageOS-supported status bar / QS settings (SystemUI already honors these) -->
    <lineageos.preference.LineageSystemSettingListPreference
        android:key="qs_quick_pulldown"
        android:title="@string/status_bar_quick_qs_pulldown_title"
        android:summary="%s"
        android:entries="@array/status_bar_quick_qs_pulldown_entries"
        android:entryValues="@array/status_bar_quick_qs_pulldown_values"
        android:defaultValue="0" />

    <lineageos.preference.LineageSystemSettingListPreference
        android:key="status_bar_battery_style"
        android:title="@string/status_bar_battery_style_title"
        android:summary="%s"
        android:entries="@array/status_bar_battery_style_entries"
        android:entryValues="@array/status_bar_battery_style_values"
        android:defaultValue="0" />

    <lineageos.preference.LineageSystemSettingListPreference
        android:key="status_bar_show_battery_percent"
        android:title="@string/status_bar_battery_percentage_title"
        android:summary="%s"
        android:entries="@array/status_bar_battery_percentage_entries"
        android:entryValues="@array/status_bar_battery_percentage_values"
        android:defaultValue="0" />

    <lineageos.preference.LineageSystemSettingListPreference
        android:key="status_bar_am_pm"
        android:title="@string/status_bar_am_pm_title"
        android:summary="%s"
        android:entries="@array/status_bar_am_pm_entries"
        android:entryValues="@array/status_bar_am_pm_values"
        android:defaultValue="2" />

    <org.yozakuraos.yozakuraparts.preference.SecureSettingListPreference
        android:key="yozakura_qs_columns"
        android:title="@string/yozakura_qs_columns_title"
        android:summary="%s"
        android:entries="@array/yozakura_qs_columns_entries"
        android:entryValues="@array/yozakura_qs_columns_values"
        android:defaultValue="0" />

    <org.yozakuraos.yozakuraparts.preference.SecureSettingListPreference
        android:key="yozakura_qqs_rows"
        android:title="@string/yozakura_qqs_rows_title"
        android:summary="%s"
        android:entries="@array/yozakura_qqs_rows_entries"
        android:entryValues="@array/yozakura_qqs_rows_values"
        android:defaultValue="0" />


    <!-- YozakuraOS cp81: expose LineageOS QS brightness slider options (SystemUI already honors these) -->
    <lineageos.preference.LineageSecureSettingListPreference
        android:key="qs_show_brightness_slider"
        android:title="@string/status_bar_brightness_slider_title"
        android:dialogTitle="@string/status_bar_brightness_slider_title"
        android:entries="@array/status_bar_brightness_slider_entries"
        android:entryValues="@array/status_bar_brightness_slider_values"
        android:defaultValue="1"
        android:summary="%s" />

    <lineageos.preference.LineageSecureSettingListPreference
        android:key="qs_brightness_slider_position"
        android:title="@string/status_bar_brightness_slider_position_title"
        android:dependency="qs_show_brightness_slider"
        android:entries="@array/status_bar_brightness_slider_position_entries"
        android:entryValues="@array/status_bar_brightness_slider_position_values"
        android:defaultValue="0"
        android:summary="%s" />

    <lineageos.preference.LineageSecureSettingSwitchPreference
        android:key="qs_show_auto_brightness"
        android:title="@string/status_bar_brightness_slider_auto_title"
        android:summary="@string/status_bar_brightness_slider_auto_summary"
        android:dependency="qs_show_brightness_slider"
        android:defaultValue="true" />

</PreferenceScreen>
